--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<table cellspacing="20">
 		<tr>
-			<td><img src="/Images/andrija.jpg" alt="profile-picture" width="180" height="180"></td>
+			<td><img src="Images/andrija.jpg" alt="profile-picture" width="180" height="180"></td>
 				<td><h1>Andrija Todorovic</h1>
 				<p><em>Founder and CTO of.<strong>T&M Corp.</strong></em></p>
 				<p>I'm an WEB developer, and big coffee lover.</p>
@@ -45,7 +45,7 @@
 		</tr>
 	</table>
 	<hr>
-	<a href="/hobbies.html">My Hobbies</a>
-	<a href="/contact-me.html">Contact Me</a>
+	<a href="hobbies.html">My Hobbies</a>
+	<a href="contact-me.html">Contact Me</a>
 </body>
 </html>
